--- a/movierecommendation/package.json
+++ b/movierecommendation/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-server": "^18.2.10",
     "@angular/router": "^18.2.10",
     "@angular/ssr": "^18.2.11",
+    "axios": "^1.7.7",
     "express": "^4.21.1",
+    "mongoose": "^8.8.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
